# ICS-Explotation-MCP

./: .gitignore  LICENSE  README.md  commands.md  git_commit.bat  git_init_push.bat  ics_exploitation_mcp.py  pyproject.toml  requirements.txt  rules.mdc
examples/: __init__.py  basic_enumeration.py  combined_ics_attack.py  exploit_reactor.py  s7_basic_usage.py  s7_memory_scan.py
tests/: __init__.py  test_ics_mcp.py
